<resources>
    <string name="alwaysUse">Use by default for this action.</string>
    <string name="connect_joystick_notification_title">External joystick connected</string>
    <string name="connect_keyboard_notification_title">External keyboard connected</string>
    <string name="date_picker_decrement_day_button">Decrease day</string>
    <string name="date_picker_decrement_month_button">Decrease month</string>
    <string name="date_picker_decrement_year_button">Decrease year</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_increment_day_button">Increase day</string>
    <string name="date_picker_increment_month_button">Increase month</string>
    <string name="date_picker_increment_year_button">Increase year</string>
    <string name="date_time_done">Done</string>
    <string name="datetime_dialog_title">Set Date&amp;Time</string>
    <string name="disconnect_joystick_notification_title">External joystick removed</string>
    <string name="disconnect_keyboard_notification_title">External keyboard removed</string>
    <string name="global_action_quickpower_off">Quick start is OFF</string>
    <string name="global_action_quickpower_on">Quick start is ON</string>
    <string name="global_action_rboot_message">Power off your phone when long pressing Power key for 10s</string>
    <string name="global_action_reset">Restart</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="multi_language_20404">China Telecom</string>
    <string name="multi_language_46000">China Mobile</string>
    <string name="multi_language_46001">China Unicom</string>
    <string name="multi_language_46002">China Mobile</string>
    <string name="multi_language_46003">China Telecom</string>
    <string name="multi_language_46007">China Mobile</string>
    <string name="multi_language_46019">460 19</string>
    <string name="noApplications">No apps can perform this action.</string>
    <string name="no_content">No corresponding content</string>
    <string name="ota_mount_notification_message">Select to copy files to/from external storage device</string>
    <string name="ota_mount_notification_title">External storage device connected</string>
    <string name="ota_unexpectedly_removed_notification_message">Unmount external storage device before removing to avoid data loss</string>
    <string name="ota_unexpectedly_removed_notification_title">External storage devices unexpectedly removed</string>
    <string name="ota_unmount_notification_message">Unmount the external storage device so you can safely remove it</string>
    <string name="ota_unmount_notification_title">Unmount external storage device</string>
    <string name="ota_unmounted_notification_title">External storage device Unmounted</string>
    <string name="pppoe_indicator_detail_connect_failure">Unconnected</string>
    <string name="pppoe_indicator_detail_connected">Connected</string>
    <string name="pppoe_indicator_detail_connecting">Connecting...</string>
    <string name="pppoe_indicator_title">PPPOE</string>
    <string name="reboot_confirm">Your phone will restart.</string>
    <string name="reboot_confirm_question">Do you want to restart?</string>
    <string name="reboot_title">Restart</string>
    <string name="search_go">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_query">Search query</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="set_silent">Silent</string>
    <string name="system_res_label">System Resources Package</string>
    <string name="textoff" />
    <string name="texton" />
    <string name="time_picker_decrement_hour_button">Decrease hour</string>
    <string name="time_picker_decrement_minute_button">Decrease minute</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="time_picker_increment_hour_button">Increase hour</string>
    <string name="time_picker_increment_minute_button">Increase minute</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="toast_wifi_connected_message">Has connected to SSID %1$s.</string>
    <string name="whichApplication">Complete action using</string>
    <string name="whichHomeApplication">Select a home app</string>
    <string name="wifi_hotspot_turned_off">WLAN Hotspot turned off</string>
    <string name="wifi_hotspot_turned_off_summary">Sleep time is activated, you can modify it in WLAN hotspot-Advanced-Hotspot sleep policy.</string>
    <string name="zte_days_of_week_Fri">Fri</string>
    <string name="zte_days_of_week_Mon">Mon</string>
    <string name="zte_days_of_week_Sat">Sat</string>
    <string name="zte_days_of_week_Sun">Sun</string>
    <string name="zte_days_of_week_Thu">Thu</string>
    <string name="zte_days_of_week_Tue">Tue</string>
    <string name="zte_days_of_week_Wed">Wed</string>
    <string name="back_button_label">Back</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="app_name">ZTEGesture</string>
    <string name="confirm">Confirm</string>
    <string name="main_title">Gesture &amp; Motion</string>
    <string name="gesture">Gesture</string>
    <string name="black_screen_gesture">Black screen gestures</string>
    <string name="double_tap_to_wakeup">Double tap to wake</string>
    <string name="draw_gesture_c_def">Call</string>
    <string name="draw_gesture_m_def">Music player</string>
    <string name="draw_gesture_w_def">WeChat</string>
    <string name="draw_gesture_z_def">Camera</string>
    <string name="draw_gesture_s_def">SMS</string>
    <string name="draw_gesture_v_def">Voice Assistant</string>
    <string name="draw_gesture_e_def">Gallery</string>
    <string name="draw_gesture_o_def">Camera</string>
    <string name="screen_shot">Three-finger tap for a screenshot</string>
    <string name="close_app">Close an app</string>
    <string name="switch_app">Switch apps</string>
    <string name="air_gestures">Air gestures</string>
    <string name="learn_more_title">Learn more</string>
    <string name="motion">Motion</string>
    <string name="call">Auto-call</string>
    <string name="answer">Auto-answer</string>
    <string name="pocket">Pocket mode</string>
    <string name="turnover">Flip to mute</string>
    <string name="alarm">Snooze/Stop an alarm</string>
    <string name="alarm_cancel">Flip stop</string>
    <string name="alarm_snooze">Tap for a snooze</string>
    <string name="alarm_cancel_sum">When an alarm is sounded, you can turn the phone over to stop the alarm.</string>
    <string name="alarm_snooze_sum">When an alarm is sounded, you can tap the screen with three or more fingers to make it snooze. The alarm may be sounded again based on your snooze settings.</string>
    <string name="change_to_receiver">Change to the receiver</string>
    <string name="intro_change_to_receiver">You can put your phone next to your ear to change from the speaker to the receiver when you are in a call.</string>
    <string name="close_screen">Close the screen</string>
    <string name="intro_close_screen">You can flip your phone over twice to lock the screen.</string>
    <string name="shake_it">Shake it</string>
    <string name="shake_flashlight">Flashlight</string>
    <string name="shake_caculator">Calculator</string>
    <string name="shake_custom">Custom</string>
    <string name="intro_double_tap">When screen is turned off, double-tap screen quickly to wake up your phone.</string>
    <string name="intro_switch_app">To switch running apps one by one, slide three fingers left or right.</string>
    <string name="intro_close_app">To close a running app, slide three fingers up or down.</string>
    <string name="intro_screenshot">To capture a screenshot, pinch the screen inwards with three fingers.</string>
    <string name="intro_call">When you put your phone close to your ear, the phone will automatically call the contact recorded on the page of text message details, contact details, or call history details.</string>
    <string name="intro_answer">To immediately answer an incoming call, you can put the phone close to your ear.</string>
    <string name="intro_turn">Turn over your phone to silence the ringer for an incoming call.</string>
    <string name="demo_switch_app">Slide three fingers left or right.</string>
    <string name="demo_close_app">Slide three fingers up or down.</string>
    <string name="demo_screenshot">Pinch the screen inwards with three fingers.</string>
    <string name="demo_answer_close_to_ear">Put your phone close to your ear.</string>
    <string name="demo_answer_success">Call answered.</string>
    <string name="demo_call_close_to_ear">Put the phone close to your ear.</string>
    <string name="demo_call_call_success">Number dialed.</string>
    <string name="demo_turn">Turn over your phone.</string>
    <string name="demo_turn_ok">Incoming call muted.</string>
    <string name="demo_alarm_pat_mute">Tap the screen.</string>
    <string name="demo_alarm_pat_mute_ok">The alarm has snoozed.</string>
    <string name="demo_alarm_flip_stop">Turn over your phone.</string>
    <string name="demo_alarm_flip_stop_ok">Alarm stopped.</string>
    <string name="demo_change_receriver">Put your phone close to your ear.</string>
    <string name="demo_change_receriver_success">Changed to the receiver.</string>
    <string name="demo_double_tap_tap">When the screen is turned off, double-tap the screen quickly to wake your phone up.</string>
    <string name="demo_double_tap_tap_success">Waked up.</string>
    <string name="demo_close_screen_turn">Flip over your phone twice.</string>
    <string name="demo_close_screen_turn_success">Screen turned off.</string>
    <string name="bt_try">Try it</string>
    <string name="app_closed">closed</string>
    <string name="screenshot_succeed">Screenshot saved.</string>
    <string name="better_exp_title">Better user experience</string>
    <string name="better_exp_content">This is a multi-touch game/app. For a better experience, it is recommended that you turn off screen gestures. You can turn them on in Settings >Gesture &amp; motion if necessary.</string>
    <string name="better_exp_closegesture">Turn off</string>
    <string name="better_exp_cancel">Cancel</string>
    <string name="better_exp_no_remind">Do not remind me again.</string>
    <string name="gestures_music_left">Switch music (previous)</string>
    <string name="gestures_music_right">Switch music(next)</string>
    <string name="unlock_screen">Unlock the screen</string>
    <string name="learn_more_tip">Tip: When using multi-touch-enabled apps, turn three-finger gestures off for a better experience. Tap to learn more.</string>
    <string name="learn_more_content">Some multi-touch-enabled apps, such as piano apps and Ninjia Fruit, may conflict with three-finger gestures. Turn three-finger gestures off for a better experience.</string>
    <string name="head_tips">When Gesture &amp; motion is turned on, more battery power will be consumed. If your phone has a leather case, some functions may not be available.</string>
    <string name="intro_air_gestures">Hold your phone, press a volume key and then draw the letter in the air. When finished, release your finger to launch corresponding feature or app.</string>
    <string name="default_">Default</string>
</resources>