<?xml version="1.0" encoding="utf-8"?>
<com.zte.mifavor.preference.PreferenceScreen android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zte.zgesture.setting.SettingSwitchPreference android:persistent="false" android:title="@string/black_screen_gesture" android:key="black_screen_gesture" />
    <com.zte.zgesture.setting.SettingSwitchPreference android:persistent="false" android:title="@string/double_tap_to_wakeup" android:key="double_tap" />
    <com.zte.zgesture.setting.SettingSwitchPreference android:persistent="false" android:title="@string/close_app" android:key="close_app" />
    <com.zte.zgesture.setting.SettingSwitchPreference android:persistent="false" android:title="@string/switch_app" android:key="switch_app" />
    <com.zte.zgesture.setting.SettingSwitchPreference android:persistent="false" android:title="@string/screen_shot" android:key="screen_shot" />
    <com.zte.mifavor.preference.Preference android:persistent="false" android:key="learn_more" android:summary="@string/learn_more_tip" />
</com.zte.mifavor.preference.PreferenceScreen>